<resources>

    <string name="app_name">南理工学生小助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">南理工学生小助手</string>
    <string name="desc">主题图片</string>
    <drawable name="bkcolor">#c0d9d9</drawable>
    <string name="sayHello">  欢迎使用南理工学生小助手，请选择您的应用：</string>
    <string name="homeChoose1">GPA查询</string>
    <string name="homeChoose2">NJUST ACM题库</string>
    <string name="ChooseOj">选择judge</string>
    <string name="inputTheProblemId">输入题号</string>
    <string name="getProblem">给我题目</string>
    <string name="move_back">后退</string>
    <string name="WebView">WebView</string>
    <string name="TextView">TextView</string>
    <string name="gpa_message_shows">欢迎使用南理工学生gpa查询系统，请输入您登录教务处系统的学号和密码。系统将为您获取成绩并计算GPA：</string>
    <string name="student_number">学号</string>
    <string name="student_password">密码</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>

</resources>