<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkcolor" >

    <TableRow android:layout_width="fill_parent" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/desc"
            android:minHeight="100dp"
            android:src="@drawable/ic_launcher" />
    </TableRow>

    <TableRow android:layout_width="fill_parent" >

        <TextView
            android:id="@+id/wellcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="60dp"
            android:paddingLeft="@dimen/lypad10"
            android:paddingRight="@dimen/lypad10"
            android:text="@string/sayHello"
            android:textSize="20dp"
            android:width="150dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/homeButton1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/homeChoose1"
            android:textSize="16dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/homeButton2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/homeChoose2"
            android:textSize="16dp" />
    </TableRow>

</TableLayout>