<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkcolor"
    android:shrinkColumns="0,1" >

    <TableRow android:layout_width="fill_parent" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:contentDescription="@string/desc"
            android:minHeight="100dp"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_launcher" />
    </TableRow>

    <TableRow android:minHeight="60dp" >

        <TextView
            android:id="@+id/chosseOJ"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:height="28dp"
            android:text="@string/ChooseOj"
            android:textSize="30dp"
            android:width="220dp" >
        </TextView>

        <Spinner
            android:id="@+id/ojList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="28dp"
            android:layout_column="1" />
    </TableRow>

    <TableRow android:minHeight="60dp" >

        <TextView
            android:id="@+id/chosseProblem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:height="28dp"
            android:text="@string/inputTheProblemId"
            android:textSize="30dp"
            android:width="220dp" >
        </TextView>

        <EditText
            android:id="@+id/problemId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:height="28dp"
            android:ems="10"
            android:inputType="number" >
            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow android:minHeight="60dp" >

        <TextView />

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/getProblem" />
    </TableRow>

</TableLayout>